# preimage

./: CHANGELOG.md  README.md
oh/: Cargo.toml  build.rs
oh/src/: cli.rs  config.rs  main.rs  sinks.rs  sources.rs
oh/src/objects/: file.rs  git.rs  mod.rs
oh/src/sources/: file.rs  git.rs  mod.rs
org-oh/: org-oh.el
org-preimage/: org-preimage.el
preimage/: Cargo.toml  build.rs
preimage/src/: cli.rs  config.rs  main.rs  sinks.rs
preimage/src/objects/: file.rs  git.rs
preimage/src/sources/: file.rs  git.rs
