[package]
name = "preimage"
version = "0.1.0"
authors = ["Lachlan Gunn <lachlan@gunn.ee>"]

build = "build.rs"

edition = "2018"

[dependencies]
data-encoding = "^2.1"
sha2 = "^0.7"
walkdir = "^2.2"
serde = "^1.0"
serde_yaml = "^0.7"
git2 = {version="^0.7", optional=true}
config = "^0.9"
lmdb = "^0.8"
clap = "^2"
futures = "^0.1"
tokio = "^0.1"
failure = "^0.1"

[build-dependencies]
clap = "^2"

[features]
git = ["git2"]

default=["git"]
