[package]
name = "preimage"
version = "0.2.0"
authors = ["Lachlan Gunn <lachlan@gunn.ee>"]
description = """A tool to index files by hash.

The preimage tool will scan a set of directories, and store in a database the
hashes of objects that it finds. It is then possible to look up these objects by
their hash, allowing references to objects that may move around in the directory
tree."""

readme = "../README.md"
license = "CC0-1.0"
repository = "https://github.com/LachlanGunn/preimage"

build = "build.rs"

edition = "2018"

[dependencies]
data-encoding = "^2.1"
digest = "^0.8"
sha-1 = "^0.8"
sha2 = "^0.8"
walkdir = "^2.2"
serde = "^1.0"
serde_yaml = "^0.7"
git2 = {version="^0.7", optional=true}
config = "^0.9"
lmdb = "^0.8"
clap = "^2"
futures = "^0.1"
tokio = "^0.1"
failure = "^0.1"

[build-dependencies]
clap = "^2"

[features]
git = ["git2"]

default=["git"]
